--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ before_install:
     # install core
     - cd ../
     - git clone https://github.com/owncloud/core.git --recursive --depth 1 -b $CORE_BRANCH owncloud
+    - mv owncloud-app_oauth2 oauth2
     - mv oauth2 owncloud/apps/
 
 before_script:
