--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
     # enable a display for running JavaScript tests
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
-    - if [[ "$DB" == 'mysql' ]]; then sudo apt-get -y install mariadb-server; fi
+    #- if [[ "$DB" == 'mysql' ]]; then sudo apt-get -y install mariadb-server; fi
     - nvm install 5.9
     - npm install -g npm@latest
     - make
