--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,16 @@ dist: trusty
 language: php
 php:
     - 5.6
-    - 7
+    - 7.0
+    - 7.1
+    - nightly
 env:
     global:
         - CORE_BRANCH=stable9
     matrix:
         - DB=pgsql
-
-matrix:
-    allow_failures:
-        - env: DB=pgsql CORE_BRANCH=master
-    include:
-        - php: 5.6
-          env: DB=sqlite
-        - php: 5.6
-          env: DB=mysql
-        - php: 5.6
-          env: DB=pgsql CORE_BRANCH=master
-    fast_finish: true
+        - DB=sqlite
+        - DB=mysql
 
 before_install:
     # enable a display for running JavaScript tests
