--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ language: php
 php:
     - 5.6
     - 7.0
-    - 7.1
-    - nightly
+    #- 7.1
+    #- nightly
 env:
     global:
         - CORE_BRANCH=stable9
