--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
         - CORE_BRANCH=stable9
         - CORE_BRANCH=stable9.1
         - master
+    matrix:
         - DB=pgsql
         - DB=sqlite
         - DB=mysql
