--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,23 @@ language: php
 php:
     - 5.6
     - 7.0
+
 env:
-    matrix:
-        - CORE_BRANCH=stable9
+    global:
         - CORE_BRANCH=stable9.1
-        - master
     matrix:
         - DB=pgsql
         - DB=sqlite
         - DB=mysql
+
+matrix:
+    allow_failures:
+        - php: 7.1
+          env: DB=pgsql CORE_BRANCH=master
+        - php: nightly
+          env: DB=pgsql CORE_BRANCH=master
+    fast_finish: true
+
 
 allow_failures:
     matrix:
