--- a/.travis.yml
+++ b/.travis.yml
@@ -6,26 +6,23 @@ php:
     - 7.0
 
 env:
-    global:
-        - CORE_BRANCH=stable9.1
-    matrix:
-        - DB=pgsql
-        - DB=sqlite
-        - DB=mysql
+    - CORE_BRANCH=stable9.1 DB=pgsql
+    - CORE_BRANCH=stable9.1 DB=sqlite
+    - CORE_BRANCH=stable9.1 DB=mysql
+    - CORE_BRANCH=master DB=pgsql
+    - CORE_BRANCH=master DB=sqlite
+    - CORE_BRANCH=master DB=mysql
 
 matrix:
     allow_failures:
         - php: 7.1
-          env: DB=pgsql CORE_BRANCH=master
         - php: nightly
-          env: DB=pgsql CORE_BRANCH=master
     fast_finish: true
 
 before_install:
     # enable a display for running JavaScript tests
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
-    #- if [[ "$DB" == 'mysql' ]]; then sudo apt-get -y install mariadb-server; fi
     - nvm install 5.9
     - npm install -g npm@latest
     - make
