--- a/.travis.yml
+++ b/.travis.yml
@@ -4,19 +4,27 @@ language: php
 php:
     - 5.6
     - 7.0
+    - 7.1
+    - nightly
 
 env:
     - CORE_BRANCH=stable9.1 DB=pgsql
     - CORE_BRANCH=stable9.1 DB=sqlite
     - CORE_BRANCH=stable9.1 DB=mysql
-    - CORE_BRANCH=stable9.0 DB=pgsql
-    - CORE_BRANCH=stable9.0 DB=sqlite
-    - CORE_BRANCH=stable9.0 DB=mysql
+    - CORE_BRANCH=stable9 DB=pgsql
+    - CORE_BRANCH=stable9 DB=sqlite
+    - CORE_BRANCH=stable9 DB=mysql
+    - CORE_BRANCH=master DB=pgsql
+    - CORE_BRANCH=master DB=sqlite
+    - CORE_BRANCH=master DB=mysql
 
 matrix:
     allow_failures:
         - php: 7.1
         - php: nightly
+        - env: DB=pgsql CORE_BRANCH=master
+        - env: DB=mysql CORE_BRANCH=master
+        - env: DB=sqlite CORE_BRANCH=master
 
 before_install:
     # enable a display for running JavaScript tests
