--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,7 @@ matrix:
     allow_failures:
         - php: 7.1
         - php: nightly
-        - env: DB=pgsql CORE_BRANCH=master
-        - env: DB=mysql CORE_BRANCH=master
-        - env: DB=sqlite CORE_BRANCH=master
+        - env: CORE_BRANCH=master
     fast_finish: true
 
 before_install:
