--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,24 @@ php:
     - nightly
 
 env:
-    - CORE_BRANCH=master DB=pgsql
-    - CORE_BRANCH=master DB=sqlite
-    - CORE_BRANCH=master DB=mysql
+  global:
+    - CORE_BRANCH=master
+    - APP_NAME=oauth2
+  matrix:
+    - DB=sqlite
+
 matrix:
+    include:
+      - php: 5.6
+        env: DB=oracle
+      - php: 5.6
+        env: DB=mysql
+      - php: 5.6
+        env: DB=pgsql
+      - php: 5.6
+        env: DB=mysqlmb4
     allow_failures:
-        - php: 7.1
-        - php: nightly
+      - php: nightly
     fast_finish: true
 
 branches:
@@ -31,22 +42,17 @@ before_install:
     - make
     - make appstore
     # install core
-    - cd ../
-    - git clone https://github.com/owncloud/core.git --recursive --depth 1 -b $CORE_BRANCH owncloud
-    - if [[ "$CORE_BRANCH" == 'master' ]]; then cd owncloud; make; cd ../; fi
-    - mv oauth2 owncloud/apps/
+    - bash tests/.travis/before_install.sh $APP_NAME $CORE_BRANCH $DB
+    # Add some output debugging information
+    - cd ../core
+    - ./occ app:enable $APP_NAME
+    - ./occ check
+    - ./occ status
+    - ./occ app:list
 
 before_script:
-    - if [[ "$DB" == 'pgsql' ]]; then createuser -U travis -s oc_autotest; fi
-    - if [[ "$DB" == 'mysql' ]]; then mysql -u root -e 'create database oc_autotest;'; fi
-    - if [[ "$DB" == 'mysql' ]]; then mysql -u root -e "CREATE USER 'oc_autotest'@'localhost' IDENTIFIED BY '';"; fi
-    - if [[ "$DB" == 'mysql' ]]; then mysql -u root -e "grant all on oc_autotest.* to 'oc_autotest'@'localhost';"; fi
-    - cd owncloud
-    - mkdir data
-    - ./occ maintenance:install --database-name oc_autotest --database-user oc_autotest --admin-user admin --admin-pass admin --database $DB --database-pass=''
-    - ./occ app:enable oauth2
     - php -S localhost:8080 &
-    - cd apps/oauth2
+    - cd apps/$APP_NAME
 
 script:
     - make test
