--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ matrix:
         env: DB=pgsql
       - php: 5.6
         env: DB=mysqlmb4
+      - php: 7.0
+        env: DB=sqlite CORE_BRANCH=stable10
     allow_failures:
       - php: nightly
     fast_finish: true
