--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ before_install:
     # enable a display for running JavaScript tests
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
-    - nvm install 5.9
+    - nvm install node
     - npm install -g npm@latest
     - make
     - make appstore
