--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ php:
 
 env:
   global:
-    - CORE_BRANCH=master
+    - CORE_BRANCH=stable10
     - APP_NAME=oauth2
   matrix:
     - DB=sqlite
@@ -25,8 +25,10 @@ matrix:
         env: DB=pgsql
       - php: 5.6
         env: DB=mysqlmb4
-      - php: 7.0
-        env: DB=sqlite CORE_BRANCH=stable10
+      - php: 7.1
+        env: DB=sqlite CORE_BRANCH=master
+      - php: 7.2
+        env: DB=sqlite CORE_BRANCH=master
     allow_failures:
       - php: nightly
     fast_finish: true
