acceptance tests for revoking app permissions

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -25,3 +25,5 @@ default:
         - WebUIGeneralContext:
         - WebUILoginContext:
         - WebUIUserContext:
+        - WebUIPersonalSecuritySettingsContext:
+
