--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -1,19 +1,11 @@
 default:
   autoload:
     '': %paths.base%/../features/bootstrap
-  extensions:
-    SensioLabs\Behat\PageObjectExtension: ~
 
   suites:
     webUIOauth2:
       paths:
         - %paths.base%/../features/webUIOauth2
-      context:
-        parameters:
-          ocPath: apps/testing/api/v1/occ
-          adminUsername: admin
-          adminPassword: admin
-          regularUserPassword: 123456
       contexts:
         - Oauth2Context:
         - FeatureContext:
@@ -21,9 +13,13 @@ default:
             adminUsername: admin
             adminPassword: admin
             regularUserPassword: 123456
-            ocPath: ../../../../
+            ocPath: apps/testing/api/v1/occ
         - WebUIGeneralContext:
         - WebUILoginContext:
         - WebUIUserContext:
         - WebUIPersonalSecuritySettingsContext:
 
+  extensions:
+      jarnaiz\JUnitFormatter\JUnitFormatterExtension:
+          filename: report-oauth2.xml
+          outputDir: %paths.base%/../output/
