--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,10 @@ matrix:
       - php: 5.6
         env: DB=mysqlmb4
       - php: 7.1
+        env: DB=mysql
+      - php: 7.2
+        env: DB=mysql
+      - php: 7.1
         env: DB=sqlite CORE_BRANCH=master
       - php: 7.2
         env: DB=sqlite CORE_BRANCH=master
