--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,12 @@ pipeline:
     image: owncloudci/core
     pull: true
     version: ${OC_VERSION}
+    db_type: ${DB_TYPE}
+    db_name: ${DB_NAME=owncloud}
+    db_host: ${DB_TYPE}
+    db_username: autotest
+    db_password: owncloud
+    db_timeout: 120
 
   install-app:
     image: owncloudci/php:${PHP_VERSION}
@@ -49,6 +55,29 @@ pipeline:
       matrix:
         TEST_SUITE: acceptance
 
+  phpunit-unit-tests:
+    image: owncloudci/php:${PHP_VERSION}
+    pull: true
+    commands:
+    - make test-php-unit-dbg
+    when:
+      matrix:
+        TEST_SUITE: phpunit
+
+  codecov:
+    image: plugins/codecov:2
+    secrets: [codecov_token]
+    pull: true
+    files:
+    - '*.xml'
+    paths:
+    - tests/output
+    when:
+      event: [push, pull_request]
+      matrix:
+        COVERAGE: true
+
+
   notify:
     image: plugins/slack:1
     pull: true
@@ -76,13 +105,83 @@ services:
       matrix:
         TEST_SUITE: acceptance
 
+  mysql:
+    image: mysql:5.5
+    environment:
+    - MYSQL_USER=autotest
+    - MYSQL_PASSWORD=owncloud
+    - MYSQL_DATABASE=${DB_NAME=owncloud}
+    - MYSQL_ROOT_PASSWORD=owncloud
+    when:
+      matrix:
+        DB_TYPE: mysql
+
+  pgsql:
+    image: postgres:9.4
+    environment:
+    - POSTGRES_USER=autotest
+    - POSTGRES_PASSWORD=owncloud
+    - POSTGRES_DB=${DB_NAME=owncloud}
+    when:
+      matrix:
+        DB_TYPE: pgsql
+
+  oci:
+    image: deepdiver/docker-oracle-xe-11g
+    environment:
+    - ORACLE_USER=system
+    - ORACLE_PASSWORD=oracle
+    - ORACLE_DB=${DB_NAME=owncloud}
+    when:
+      matrix:
+        DB_TYPE: oci
+
+
 matrix:
   include:
+    # acceptance tests
     - PHP_VERSION: 7.1
       OC_VERSION: daily-master-qa
       TEST_SUITE: acceptance
       BEHAT_SUITE: webUIOauth2
+
     - PHP_VERSION: 5.6
       OC_VERSION: daily-stable10-qa
       TEST_SUITE: acceptance
       BEHAT_SUITE: webUIOauth2
+
+    # unit tests
+    - PHP_VERSION: 7.2
+      OC_VERSION: daily-stable10-qa
+      TEST_SUITE: phpunit
+      DB_TYPE: mysql
+      COVERAGE: true
+
+    - PHP_VERSION: 7.2
+      OC_VERSION: daily-stable10-qa
+      TEST_SUITE: phpunit
+      DB_TYPE: pgsql
+
+    - PHP_VERSION: 7.2
+      OC_VERSION: daily-stable10-qa
+      TEST_SUITE: phpunit
+      DB_TYPE: oci
+      DB_NAME: XE
+      DB_USERNAME: autotest
+
+    - PHP_VERSION: 5.6
+      OC_VERSION: daily-stable10-qa
+      TEST_SUITE: phpunit
+      DB_TYPE: sqlite
+
+    - PHP_VERSION: 7.2
+      OC_VERSION: daily-master-qa
+      TEST_SUITE: phpunit
+      DB_TYPE: sqlite
+
+    - PHP_VERSION: 7.2
+      OC_VERSION: daily-master-qa
+      TEST_SUITE: phpunit
+      DB_TYPE: sqlite
+
+
