--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,13 @@
             "email": "thomas.mueller@tmit.eu"
         }
     ],
+    "require": {},
     "require-dev": {
-        "owncloud/coding-standard": "^1.0"
+        "bamarni/composer-bin-plugin": "^1.2"
+    },
+    "extra": {
+        "bamarni-bin": {
+            "bin-links": false
+        }
     }
 }
