--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
             "email": "thomas.mueller@tmit.eu"
         }
     ],
+    "config" : {
+        "platform": {
+            "php": "7.0.8"
+        }
+    },
     "require": {},
     "require-dev": {
         "bamarni/composer-bin-plugin": "^1.2"
