--- a/.drone.yml
+++ b/.drone.yml
@@ -22,7 +22,7 @@ pipeline:
     image: owncloudci/php:${PHP_VERSION}
     pull: true
     commands:
-      - git clone -b stable10 --depth=1 https://github.com/owncloud/core.git /var/www/owncloud/testrunner
+      - git clone -b master --depth=1 https://github.com/owncloud/core.git /var/www/owncloud/testrunner
       - cp -r /var/www/owncloud/apps/oauth2 /var/www/owncloud/testrunner/apps/
       - cd /var/www/owncloud/testrunner
       - make install-composer-deps
@@ -214,17 +214,9 @@ matrix:
     NEED_INSTALL_APP: true
     NEED_SERVER: true
 
-  - PHP_VERSION: 7.0
-    OC_VERSION: daily-stable10-qa
-    TEST_SUITE: webui-acceptance
-    BEHAT_SUITE: webUIOauth2
-    NEED_CORE: true
-    NEED_INSTALL_APP: true
-    NEED_SERVER: true
-
   # unit tests
   - PHP_VERSION: 7.2
-    OC_VERSION: daily-stable10-qa
+    OC_VERSION: daily-master-qa
     TEST_SUITE: phpunit
     DB_TYPE: mysql
     COVERAGE: true
@@ -232,14 +224,14 @@ matrix:
     NEED_INSTALL_APP: true
 
   - PHP_VERSION: 7.2
-    OC_VERSION: daily-stable10-qa
+    OC_VERSION: daily-master-qa
     TEST_SUITE: phpunit
     DB_TYPE: pgsql
     NEED_CORE: true
     NEED_INSTALL_APP: true
 
   - PHP_VERSION: 7.2
-    OC_VERSION: daily-stable10-qa
+    OC_VERSION: daily-master-qa
     TEST_SUITE: phpunit
     DB_TYPE: oci
     DB_NAME: XE
@@ -248,7 +240,7 @@ matrix:
     NEED_INSTALL_APP: true
 
   - PHP_VERSION: 7.0
-    OC_VERSION: daily-stable10-qa
+    OC_VERSION: daily-master-qa
     TEST_SUITE: phpunit
     DB_TYPE: sqlite
     NEED_CORE: true
