--- a/.drone.yml
+++ b/.drone.yml
@@ -265,6 +265,14 @@ matrix:
     NEED_CORE: true
     NEED_INSTALL_APP: true
 
+  - PHP_VERSION: 7.3
+    OC_VERSION: daily-master-qa
+    TEST_SUITE: phpunit
+    DB_TYPE: sqlite
+    DB_NAME: owncloud
+    NEED_CORE: true
+    NEED_INSTALL_APP: true
+
   # Acceptance test against release tarball
   - PHP_VERSION: 7.0
     OC_VERSION: 10.2.1
