--- a/.drone.yml
+++ b/.drone.yml
@@ -1009,6 +1009,9 @@ trigger:
   ref:
   - refs/tags/**
   - refs/heads/master
+  status:
+  - success
+  - failure
 
 depends_on:
 - phpunit-php7.0-sqlite
