--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
             "php": "7.0.8"
         }
     },
-    "require": {},
+    "require": {
+        "rowbot/url": "^1.1"
+    },
     "require-dev": {
         "bamarni/composer-bin-plugin": "^1.2"
     },
