Update starlark code

--- a/.drone.yml
+++ b/.drone.yml
@@ -539,7 +539,7 @@ steps:
 services:
 - name: oracle
   pull: always
-  image: deepdiver/docker-oracle-xe-11g:latest
+  image: owncloudci/oracle-xe:latest
   environment:
     ORACLE_DB: XE
     ORACLE_DISABLE_ASYNCH_IO: true
@@ -770,6 +770,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -805,12 +806,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -892,6 +889,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -927,12 +925,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
