--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ vendor-bin/**/vendor
 vendor-bin/**/composer.lock
 
 # Tests - auto-generated files
+.phpunit.result.cache
 /tests/acceptance/output*
 /tests/output
