--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -22,6 +22,8 @@ default:
         - WebUIPersonalSecuritySettingsContext:
 
   extensions:
-      jarnaiz\JUnitFormatter\JUnitFormatterExtension:
-          filename: report-oauth2.xml
-          outputDir: '%paths.base%/../output/'
+    jarnaiz\JUnitFormatter\JUnitFormatterExtension:
+      filename: report-oauth2.xml
+      outputDir: '%paths.base%/../output/'
+
+    Cjm\Behat\StepThroughExtension: ~
