--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
     "config" : {
         "platform": {
             "php": "7.3"
+        },
+        "allow-plugins": {
+            "bamarni/composer-bin-plugin": true
         }
     },
     "require": {
