--- a/l10n/.tx/config
+++ b/l10n/.tx/config
@@ -2,7 +2,7 @@
 host = https://www.transifex.com
 lang_map = ja_JP: ja
 
-[owncloud.oauth2]
+[o:owncloud-org:p:owncloud:r:oauth2]
 file_filter = <lang>/oauth2.po
 source_file = templates/oauth2.pot
 source_lang = en
