--- a/vendor-bin/behat/composer.json
+++ b/vendor-bin/behat/composer.json
@@ -16,6 +16,7 @@
         "symfony/translation": "^4.4",
         "sabre/xml": "^2.2",
         "guzzlehttp/guzzle": "^7.4",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "helmich/phpunit-json-assert": "^3.4"
     }
 }
