Replace excludes_analyse with excludePaths in phpstan.neon

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,6 +3,6 @@ parameters:
   treatPhpDocTypesAsCertain: false
   bootstrapFiles:
     - %currentWorkingDirectory%/../../lib/base.php
-  excludes_analyse:
+  excludePaths:
     - %currentWorkingDirectory%/appinfo/Migrations/*.php
   ignoreErrors:
